<resources>
    <string name="app_name">Tarea6</string>

    <string name="home">Home</string>
    <string name="registry">Registry</string>
    <string name="favorites_song">Favorite songs</string>
    <string name="contact">Contact</string>

    <string name="next">Next</string>
    
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    
    <string name="user">User</string>
    <string name="password">Password</string>
    <string name="text_login"> Default user: user \nDefault password: 1234
    </string>

    <string name="log_in">Log in</string>
    <string name="text_welcome">Welcome %1$s %2$s</string>
    <string name="name">Name: Nizar Sanchez</string>
    <string name="id">ID: 2018-6482</string>
    <string name="career">Career: Software Development</string>

    <string name="about_app">About the app: This app was developed by Nizar Sanchez and tested in API 19</string>
    <string name="song">Song: %1$s</string>
    <string name="artist">Artist: %1$s</string>

    <string name="passed">You have changed to the tab:</string>
    <string name="wrong">The user or the password are wrong</string>

    <string name="ok">OK</string>

    <string name="success">You have been already registred</string>
    <string name="empty_fields">The fields must NOT be empty</string>


    

    
</resources>
